--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 		<link href="css/style.css" type="text/css" rel="stylesheet">
 	</head>
 	<body>
-		Hello World!
+		<img src="img/headshot.jpg"/>
+		<div id="header">
+			<h1 id="name">Andrew Liu</h1>
+			<div id="header-line2">
+				<h3 id="email">andrew.jehan.liu@gmail.com</h3>
+				<h3 id="phone">(650) 450-3345</h3>
+			</div>
+		</div>
+		<a href="resume.pdf" target="_blank">r&eacute;sum&eacute;</a>
+		<p>Hello World!</p>
 	</body>
 </html>
