--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 				<h3 id="phone">(650) 450-3345</h3>
 			</div>
 		</div>
-		<a href="resume.pdf" target="_blank">r&eacute;sum&eacute;</a>
-		<p>Hello World!</p>
+		<a href="Resume.pdf" target="_blank">r&eacute;sum&eacute;</a>
+		<a href="Drone.pdf" target="_blank">r&eacute;sum&eacute;</a>
+		<p>Syracuse Alumni</p>
 	</body>
 </html>
