Adding index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<img src="img/headshot.jpg"/>
 		<div id="header">
-			<h1 id="name">Andrew J Liu</h1>
+			<h1 id="name">Andrew Liu</h1>
 			<div id="header-line2">
 				<h3 id="email">andrew.jehan.liu@gmail.com</h3>
 				<h3 id="phone">(650) 450-3345</h3>
