--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<link href="css/style.css" type="text/css" rel="stylesheet">
 	</head>
 	<body>
-		<img src="img/headshot.jpg" alt="Cover shot" width="30" height="30" />
+		<img src="img/headshot.jpg" alt="Cover shot" width="50" height="50" />
 		<div id="header">
 			<h1 id="name">Andrew Liu</h1>
 			<div id="header-line2">
@@ -12,7 +12,7 @@
 				<h3 id="phone">(650) 450-3345</h3>
 			</div>
 		</div>
-		<a href="Resume.pdf" target="_blank">r&eacute;sum&eacute;</a>
+		<a href="Resume.pdf" target="_blank">R&eacute;sum&eacute;</a>
 		<a href="Drone.pdf" target="_blank">Drone Shot</a>
 		<p>Syracuse Alumni</p>
 	</body>
