--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			</div>
 		</div>
 		<a href="Resume.pdf" target="_blank">R&eacute;sum&eacute;</a>
-		<img src="img/Drone Shot.jpg" target="_blank">Drone Shot</a>
+		<a href="img/Drone Shot.jpg" target="_blank">Drone Shot</a>
 		<p>Syracuse Alumni</p>
 	</body>
 </html>
