adding link for drone img

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			</div>
 		</div>
 		<a href="Resume.pdf" target="_blank">R&eacute;sum&eacute;</a>
+		<a href="img/Drone-Shot.JPG" target="_blank">Drone</a>
 		<p>Syracuse Alumni</p>
 	</body>
 </html>
