--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 				<h3 id="email">andrew.jehan.liu@gmail.com</h3>
 				<h3 id="phone">(650) 450-3345</h3>
 			</div>
+			<ul>
+				<li> About Me </li>
+				<li> Pictures </li>
+				<li> Projects </li>
 		</div>
 		<a href="Resume.pdf" target="_blank">R&eacute;sum&eacute;</a>
 		<a href="img/Drone-Shot.JPG" target="_blank">Drone</a>
