--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				<h3 id="phone">(650) 450-3345</h3>
 			</div>
 			<ul>
-				<li> About Me </li>
+				<li> <a href="https://na.op.gg/summoner/userName=blou">About Me </a></li>
 				<li> Pictures </li>
 				<li> Projects </li>
 		</div>
